added render and delete functions

--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
     </div>
     <div id="outputs">
         <h3>Employees</h3>
+        <ul id="employeesOut">
+          <li></li>
+        </ul>
         
 
     </div>
