Numbers now look like currency

--- a/index.html
+++ b/index.html
@@ -20,11 +20,12 @@
       <button id="submit">submit</button>
     </div>
     <div id="outputs">
-        <h3>Employees</h3>
+        <h2>Employees</h2>
         <ul id="employeesOut">
           <li></li>
         </ul>
-        
+        <h3>Total Monthly Cost</h3>
+        <p id="costOut"></p>
 
     </div>
   </body>
