Added Table Body Element

--- a/index.html
+++ b/index.html
@@ -20,12 +20,37 @@
       <button id="submit">submit</button>
     </div>
     <div id="outputs">
-        <h2>Employees</h2>
+        <!-- <h2>Employees</h2>
         <ul id="employeesOut">
           <li></li>
-        </ul>
+        </ul> -->
+
+        <table >
+          <tr>
+            <th>First Name</th>
+            <th>Last Name</th>
+            <th>ID</th>
+            <th>Title</th>
+            <th>Annual Salary</th>
+          </tr>
+        <!-- </table> -->
+        <!-- <table id="newRow"> -->
+          <tbody id="newRow">
+          <tr>
+            <td>First</td>
+            <td>Last</td>
+            <td>ID</td>
+            <td>Title</td>
+            <td>Annual Salary</td>
+          </tr>
+        </tbody>
+        </table>
+      </div>
+
         <h3>Total Monthly Cost</h3>
         <p id="costOut"></p>
+
+
 
     </div>
   </body>
